--- a/currencyConverter/src/main/resources/application-test.properties
+++ b/currencyConverter/src/main/resources/application-test.properties
@@ -7,3 +7,5 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
