Set task to run from fixed URL on properties

--- a/currencyConverter/src/main/resources/application-test.properties
+++ b/currencyConverter/src/main/resources/application-test.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+fixer.io.apiKey=http://api.exchangeratesapi.io/latest?base=EUR&access_key=9727529ac55f7d5f929e03a5d4de58b8
